# Repo2Skill

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
docs/: bootstrap-gap-analysis.md  design.md  next-steps.md  task.md  usage-guide.md
reference/: README.md
repo2skill-skill/: SKILL.md  deploy.sh  skill.yaml
repo2skill-skill/references/: enrichment-guide.md  extractor-guide.md  g2-review.md  suite-mode.md  trust-levels.md
repo2skill-skill/scripts/: assemble.py  audit_g1.py  audit_g2.py  extract.py  requirements.txt  structure.py
src/repo2skill/: __init__.py  assemble.py  cli.py  extractor.py  models.py  structure.py  suite.py
src/repo2skill/reviewer/: __init__.py  g1.py
templates/: skill.md.j2  skill.yaml.j2  suite.yaml.j2
tests/phase2/: test_bootstrap.py  test_cli_phase2.py  test_models.py  test_reviewer_g1.py  test_suite.py
tests/smoke/: test_phase1.py
