[project]
name = "repo2skill"
version = "0.2.0"
description = "Decompose any Git repository and produce a verified, standards-compliant Agent Skill"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
repo2skill = "repo2skill.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
